[gd_scene load_steps=6 format=3 uid="uid://da2k87dmfitt8"]

[ext_resource type="Script" path="res://script/ui/draw_mode.gd" id="1_ilpmw"]
[ext_resource type="Texture2D" uid="uid://civgscnwowptw" path="res://asset/2d/ui/misc/nifty_pencil.png" id="2_3om5o"]
[ext_resource type="AudioStream" uid="uid://b5pb8i60x740e" path="res://sfx/ui/draw.wav" id="3_xl7gr"]

[sub_resource type="Gradient" id="Gradient_1eat8"]
colors = PackedColorArray(0.772549, 0.137255, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vtla4"]
gradient = SubResource("Gradient_1eat8")
width = 32

[node name="DrawMode" type="Control"]
process_mode = 3
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ilpmw")

[node name="Border1" type="TextureRect" parent="."]
z_index = 2
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -288.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_vtla4")
expand_mode = 1

[node name="Border2" type="TextureRect" parent="."]
z_index = 2
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 288.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_vtla4")
expand_mode = 1
flip_h = true

[node name="TextureOrigin" type="Marker2D" parent="."]
position = Vector2(32, 0)

[node name="RoomTexture" type="TextureRect" parent="TextureOrigin"]
z_index = 1
z_as_relative = false
offset_right = 40.0
offset_bottom = 40.0

[node name="BGTexture" type="TextureRect" parent="TextureOrigin"]
offset_right = 40.0
offset_bottom = 40.0

[node name="PixelOrigin" type="Marker2D" parent="."]
position = Vector2(32, 240)

[node name="Brush" type="TextureRect" parent="PixelOrigin"]
z_index = 3
z_as_relative = false
offset_top = -10.0
offset_right = 12.0
texture = ExtResource("2_3om5o")

[node name="DrawSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xl7gr")
bus = &"HUD_SFX"
